# twitterclone1

./: db.sqlite3  pyproject.toml
authentication/: forms.py  views.py
notification/: helpers.py  models.py
notification/migrations/: 0001_initial.py  0002_notifications_tweet_notify.py  0003_notifications_user_notify.py
templates/: base.html  generic_form.html  index.html  notifications.html  profile.html  tweets.html
tweet/: admin.py  forms.py  helpers.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweets_user.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
