[tool.poetry]
name = "twitterclone1"
version = "0.1.0"
description = ""
authors = ["rhami223 <rhami223@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
